<resources>
    <string name="app_name">STORY BITES</string>
    <string name="intro_subtitle">Un lugar para las historias breves</string>
    <string name="intro_btnStarted">Empezar</string>
    <string name="intro_tutorial">Tutorial</string>
    <string name="login_user">Email</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_nick">Nombre</string>
    <string name="login_btn">Registrarse</string>
    <string name="login_msg">Sign in</string>
    <string name="signUp_msg">Sign up</string>
    <string name="login_toUp">¿No tienes una cuenta?</string>
    <string name="login_toIn">¿Tienes una cuenta?</string>
    <string name="goal_title">Escoge los temas</string>
    <string name="tut_first_title">¿Que es Story Bites?</string>
    <string name="tut_first_msg">Story bites es una app con la que leer y escribir breves historias</string>
    <string name="tut_first_msg_2">Con Story bites descubrirás historias escritas por los usuarios a la par que tu también podrás escribir las tuyas</string>
    <string name="tut_second_title">¿Como podre encontrar </string>
    <string name="tut_second_title_2">historias que me gusten? </string>
    <string name="tut_second_msg">Tras registrarte deberás elegir una serie de tematicas que servirán para detectar que libros coinciden con las mismas</string>
    <string name="tut_second_msg_2">Estas mismas tematicas te ayudarán a que ciertos usuarios lean tus historias</string>
    <string name="tut_third_title">¿Como puedo empezar?</string>
    <string name="tut_third_msg">Puedes empezar registrandote</string>
    <string name="tut_third_msg_2">Tras esto podrás elegir tus gustos y con esto terminado tendras la opcion de leer o crear historias</string>
    <string name="main_fragment_greeting">Bienvenido %s</string>
    <string name="main_fragment_books_msg">Libros que quizás te interesen</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_home">Home</string>
    <string name="menu_fav">Favoritos</string>
    <string name="settings_btn_act">Actualizar</string>
    <string name="settings_btn_goals">Act. gustos</string>
    <string name="settings_btn_account">Eliminar cuenta</string>
    <string name="detail_btn">Quiero leerlo</string>

    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>

    <string name="core_title_dialog">Guardar historia</string>
    <string name="general_no">No</string>
    <string name="core_title_act_dialog">Actualizar historia</string>
    <string name="general_yes">Si</string>
    <string name="core_act_error">Fallo al actualizar</string>
    <string name="core_dialog_fail">Faltan datos por rellenar</string>
    <string name="general_accept">Aceptar</string>
    <string name="detail_by">por</string>
    <string name="detail_del_dialog">¿Quieres borrar la historia?</string>
    <string name="detail_del_error">Error al borrar la historia</string>
    <string name="main_user_error">Error en la lectura del documento del usuario logueado</string>
    <string name="main_book_error">Error en la lectura de libros</string>
    <string name="settings_snack">Has actualizado tus datos</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_dialog_err">Debes rellenar todos los campos</string>
    <string name="sigin_err">Fallo en el registro</string>
    <string name="texto_de_ej">texto de ej</string>
    <string name="decripcion_input">Decripcion</string>
    <string name="duracion_min_input">Duracion (min)</string>
    <string name="titulo_input">Titulo</string>
    <string name="content_input">Content</string>
    <string name="fragment_content_ej">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut blandit tellus a urna dictum, et iaculisrisus placerat.</string>
    <string name="fragment_del_btn">Quiero borrar el libro</string>
    <string name="fragment_title_ej">book 1 by H.P. Lovecraft</string>
    <string name="fragment_goal_ej">mystery</string>
    <string name="fragment_dur_ej">12 min</string>
</resources>