<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".IntroActivity">

    <TextView
        android:id="@+id/txt_intro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/pango"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_intro_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_subtitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/source_sans_pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_intro_title"
        />

    <Button
        android:id="@+id/btn_getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_btnStarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@drawable/corner_btn"

        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn_getTutorial"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"

        android:background="@drawable/underline_txt"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/intro_tutorial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_getStarted" />

</androidx.constraintlayout.widget.ConstraintLayout>