<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".fragments.TutorialSecondFragment">

    <TextView
        android:id="@+id/tut_second_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tut_second_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/pango"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tut_second_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tut_second_title_2"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pango"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tut_second_title"
        />

    <TextView
        android:id="@+id/tut_second_msg"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/tut_second_msg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/source_sans_pro"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tut_second_title_2"

        />

    <TextView
        android:id="@+id/tut_second_msg_2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_bias="0.76"
        android:text="@string/tut_second_msg_2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/source_sans_pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tut_second_msg"

        />

</androidx.constraintlayout.widget.ConstraintLayout>