<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".fragments.TutorialThirdFragment">

    <TextView
        android:id="@+id/tut_first_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tut_third_title"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/pango"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/third_tut_msg"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/tut_third_msg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_bias="0.76"
        android:fontFamily="@font/source_sans_pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tut_first_title"

        />

    <TextView
        android:id="@+id/third_tut_msg_2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/tut_third_msg_2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_bias="0.76"
        android:layout_marginLeft="20sp"
        android:fontFamily="@font/source_sans_pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third_tut_msg"

        />

    <Button

        android:id="@+id/btn_getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_btnStarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@drawable/corner_btn"

        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>