<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".BeginActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_msg"
        android:textColor="@color/white"
        android:fontFamily="@font/source_sans_pro"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_login_TextField"
        style="@style/ThemeOverlay.App.TextInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/login_nick"
        android:textColorHint="@color/gray"
        android:background="@drawable/underline_txt"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_login"
        app:boxStrokeColor="@drawable/input"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_login_TextInput"
            android:layout_width="match_parent"
            android:textColor="@color/gray"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_login_TextField"
        style="@style/ThemeOverlay.App.TextInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/login_user"
        android:textColorHint="@color/gray"
        android:background="@drawable/underline_txt"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_login_TextField"
        app:boxStrokeColor="@drawable/input"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_login_TextInput"
            android:layout_width="match_parent"
            android:textColor="@color/gray"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_login_TextField"
        style="@style/ThemeOverlay.App.TextInputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/login_pass"
        android:textColorHint="@color/gray"
        android:background="@drawable/underline_txt"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_login_TextField"
        app:boxStrokeColor="@drawable/input"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_login_TextInput"
            android:layout_width="match_parent"
            android:textColor="@color/gray"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_getRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:paddingLeft="50dp"
        android:fontFamily="@font/source_sans_pro"
        android:paddingRight="50dp"
        android:background="@drawable/corner_btn"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_outSignUp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"

        android:background="@drawable/underline_txt"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login_toIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/source_sans_pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_getRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>